crates/ploke-tui/tests/integration/snapshots/integration__approvals_overlay_render__approvals_codeblocks_90x28.snap
---
source: crates/ploke-tui/tests/integration/approvals_overlay_render.rs
expression: red
---
┌ Approvals ─────────────────────────────────────────────────────────────────────────────┐
│┌ Pending Proposals ──────────────┐┌ Details ──────────────────────────────────────────┐│
││▶ [E] 85b389ec  Pending  files:1 ││request_id: <UUID>   ││
││                                 ││status: Pending  files:1                           ││
││                                 ││Before/After:                                      ││
││                                 ││--- /workspace/Cargo.toml                          ││
││                                 ││- fn b() {}                                        ││
││                                 ││+ fn c() {}                                        ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
││                                 ││                                                   ││
│└─────────────────────────────────┘└───────────────────────────────────────────────────┘│
│                     ? Help | View: unlimited | Filter: pending+errored | Diff: minimal │
└────────────────────────────────────────────────────────────────────────────────────────┘
