crates/ploke-tui/tests/integration/snapshots/integration__approvals_overlay_render__approvals_empty_60x20.snap
---
source: crates/ploke-tui/tests/integration/approvals_overlay_render.rs
expression: red
---
┌ Approvals ───────────────────────────────────────────────┐
│┌ Pending Proposals ──┐┌ Details ────────────────────────┐│
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
││                     ││                                 ││
│└─────────────────────┘└─────────────────────────────────┘│
│ ? Help | View: unlimited | Filter: pending+errored | Diff│
└──────────────────────────────────────────────────────────┘
