crates/ploke-tui/tests/integration/snapshots/integration__approvals_overlay_render__approvals_multiple_sel0_80x24.snap
---
source: crates/ploke-tui/tests/integration/approvals_overlay_render.rs
expression: red1
---
┌ Approvals ───────────────────────────────────────────────────────────────────┐
│┌ Pending Proposals ──────────┐┌ Details ────────────────────────────────────┐│
││▶ [E] 23349a58  Pending  file││request_id:                                  ││
││  [E] f121579c  Pending  file││<UUID>         ││
││                             ││status: Pending  files:1                     ││
││                             ││Unified Diff:                                ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
│└─────────────────────────────┘└─────────────────────────────────────────────┘│
│           ? Help | View: unlimited | Filter: pending+errored | Diff: minimal │
└──────────────────────────────────────────────────────────────────────────────┘
