crates/ploke-tui/tests/integration/snapshots/integration__approvals_overlay_render__approvals_unified_80x24.snap
---
source: crates/ploke-tui/tests/integration/approvals_overlay_render.rs
expression: red
---
┌ Approvals ───────────────────────────────────────────────────────────────────┐
│┌ Pending Proposals ──────────┐┌ Details ────────────────────────────────────┐│
││▶ [E] 06d022ea  Pending  file││request_id:                                  ││
││                             ││<UUID>         ││
││                             ││status: Pending  files:1                     ││
││                             ││Unified Diff:                                ││
││                             ││diff --git a/src b/src                       ││
││                             ││- old                                        ││
││                             ││+ new                                        ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
││                             ││                                             ││
│└─────────────────────────────┘└─────────────────────────────────────────────┘│
│           ? Help | View: unlimited | Filter: pending+errored | Diff: minimal │
└──────────────────────────────────────────────────────────────────────────────┘
